--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 ####################Server Port Config
 server:
   port: 8080
+spring:
+  datasource:
+    url: jdbc:mysql://192.168.36.111:3306/test
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+mybatis:
+  #mapper配置文件
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: stu.cms.entity
